configs/repo/components/osdf/osdf-core/includes/services/istio-service/templates/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ${this@name}<VERSION>
  labels:
    application: ${this@name}
    projectVersion: ${this@version}
    configVersion: ${this@config.version}
    configHash: <CONFIG_HASH>
spec:
  host: ${this@name}-service.${this@project}.svc.cluster.local
  subsets:
    - name: ${this@encodedVersion}
      labels:
        projectVersion: ${this@version}
